# ai-concierge

./: .env.example  .gitignore  AGENTS.md  README.md  TODO  main.py  pyproject.toml  resources.md  sonar-project.properties
.github/workflows/: ci.yml
concierge/: api.py  cli.py  config.py  server.py  twilio_handler.py
concierge/agents/: __init__.py  cancellation_agent.py  cancellation_voice_agent.py  orchestrator_agent.py  reservation_agent.py  reservation_voice_agent.py  search_agent.py  tools.py  transcript_agent.py  triage_agent.py  voice_agent.py
concierge/agents/guardrails/: __init__.py  input_validator.py  output_validator.py
concierge/agents/tools/: definitions.py  formatting.py
concierge/guardrails/: __init__.py  input_validator.py  output_validator.py  rate_limiter.py
concierge/models/: __init__.py  call.py  reservation.py  restaurant.py
concierge/prompts/: __init__.py  cancellation_agent.md  cancellation_voice_agent.md  orchestrator_agent.md  reservation_agent.md  reservation_voice_agent.md  search_agent.md  transcript_agent.md  voice_agent.md
concierge/services/: audio_converter.py  call_manager.py  restaurant_service.py  twilio_handler.py  twilio_service.py
docs/: BREAKTHROUGH.md  FINAL_SIMPLE_SOLUTION.md  IMPLEMENTATION_SUMMARY.md  REALTIME_COMPLETION_SUMMARY.md  REFACTOR_TO_OFFICIAL_PATTERN.md  WEBSOCKET_FIXES.md  agent_flow.md  architecture.md  deployment.md  project.md  realtime_voice_integration.md  resources.md  twilio_media_streams_troubleshooting.md  twilio_realtime_flow.md
scripts/: setup_tunnel.sh  start_server.sh  visualize_agents.py
src/concierge/: __init__.py  __main__.py  api.py
src/concierge/agents/: __init__.py  cancellation_agent.py  cancellation_voice_agent.py  orchestrator_agent.py  reservation_agent.py  search_agent.py  transcript_agent.py  voice_agent.py
src/concierge/agents/guardrails/: output_validator.py
src/concierge/agents/prompts/: cancellation_voice_agent.md
src/concierge/agents/tools/: __init__.py  voice.py
src/concierge/models/: call.py  reservation.py
src/concierge/services/: call_manager.py  twilio_handler.py  twilio_service.py
tests/: __init__.py  test_agents.py  test_audio_converter.py  test_call_manager.py  test_guardrails.py  test_media_stream.html  test_models.py  test_services.py  test_session_memory.py  test_websocket.html
