[project]
name = "AI-Concierge"
version = "0.1.0"
description = "Simple AI-Concierge using OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy>=2.3.3",
    "openai>=1.107.2",
    "openai-agents[voice,viz]>=0.3.0",
    "pytest>=8.4.2",
    "twilio>=9.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "scipy>=1.14.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

# Ruff configuration
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13+
target-version = "py313"

[tool.ruff.lint]
select = [
    "E4",   # pycodestyle errors
    "E7",   # pycodestyle errors
    "E9",   # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PD",   # pandas-vet
    "PGH",  # pygrep-hooks
    "PL",   # pylint
    "TRY",  # tryceratops
    "FLY",  # flynt
    "NPY",  # numpy
    "AIR",  # airflow
    "PERF", # perflint
    "FURB", # refurb
    "RUF",  # Ruff-specific rules
]

ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "B006",  # do not use mutable data structures for argument defaults
    "PLR0911", # too many return statements
    "PLR0913", # too many arguments to function call
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR2004", # magic value used in comparison
    "PLW0603", # global statement
    "TRY003", # avoid specifying long messages outside the exception class
    "EM101",  # raw string in exception, use f-string
    "EM102",  # f-string in exception, use .format()
    "EM103",  # dot format in exception, use f-string
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*.py" = [
    "PLR2004",  # magic value
    "S101",     # assert
    "TID252",   # relative imports
    "PLC0415",  # imports inside functions for test isolation
]

# Allow print statements in scripts and CLI
"scripts/**/*.py" = [
    "T20",  # flake8-print
    "PLC0415",  # imports inside functions for optional dependencies
]
"src/concierge/cli.py" = [
    "T201",  # print statements allowed in CLI
]

# Files with intentional late imports to avoid circular dependencies
"src/concierge/agents/tools/definitions.py" = [
    "PLC0415",  # imports inside functions to avoid circular imports
    "TRY300",   # stylistic choice for readability
]
"src/concierge/agents/cancellation_voice_agent.py" = [
    "PLC0415",  # imports inside functions to avoid circular imports
    "TRY300",   # stylistic choice for readability
]
"src/concierge/services/twilio_handler.py" = [
    "PLC0415",  # imports inside functions to avoid circular imports
    "SIM102",   # nested ifs more readable in context
]
"src/concierge/api.py" = [
    "PLC0415",  # imports inside functions to avoid circular imports
    "TRY300",   # stylistic choice for readability
]
"src/concierge/services/call_manager.py" = [
    "PLC0415",  # imports inside functions to avoid circular imports
]

[tool.ruff.lint.isort]
known-first-party = ["concierge"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
